--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "jenssegers/agent": "^2.6",
+        "jeroennoten/laravel-adminlte": "^3.8",
         "laravel/breeze": "^1.10",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
